tree-sitter-gsql/grammar.js
    source_file: $ => repeat(choice($._top_level_statement, ';')),

    _top_level_statement: $ => choice(
      $.vertex_definition,
      $.edge_definition,
      $.graph_definition,
      $.typedef_statement,
      $.query_definition,
      $.opencypher_query_definition,
      $.interpret_query_statement,
      $.loading_job_definition,
      $.schema_change_job_definition,
      $.data_source_definition,
      $.package_definition,
      $.use_statement,
      $.install_query_statement,
      $.run_query_statement,
      $.run_job_statement,
      $.drop_statement,
      $.show_statement,
      $.security_statement,
      $.grant_statement,
      $.revoke_statement,
      $.data_source_grant_statement,
      $.description_statement,
      $.row_policy_statement,
      $.install_function_statement,
      $.shell_command,
      $.stub_declaration,
    ),

    // ------------------------------------------------------------------
    // Stubs: the declarations of the built-ins, in the reference file that
    // "go to definition" opens (the equivalent of Python's `.pyi` files).
    // ------------------------------------------------------------------

    vertex_definition: $ => seq(
      choice(kw('CREATE'), kw('ADD')),
      kw('VERTEX'),
      field('name', $.identifier),
      field('attributes', $.vertex_attribute_list),
      optional($.with_clause),
    ),

    vertex_attribute_list: $ => seq(
      '(',
      commaSep(choice(
        $.primary_id_definition,
        $.attribute_definition,
        $.primary_key_constraint,
      )),
      ')',
    ),

    primary_id_definition: $ => seq(
      kw('PRIMARY_ID'),
      field('name', $.identifier),
      field('type', $._attribute_type),
      optional($.default_value),
    ),

    attribute_definition: $ => seq(
      field('name', $.identifier),
      field('type', $._attribute_type),
      optional(field('primary_key', $.primary_key)),
      optional(kw('NULLABLE')),
      optional($.default_value),
    ),

    primary_key: _ => seq(kw('PRIMARY'), kw('KEY')),

    primary_key_constraint: $ => seq(
      kw('PRIMARY'),
      kw('KEY'),
      '(',
      commaSep1(field('attribute', $.identifier)),
      ')',
    ),

    default_value: $ => seq(kw('DEFAULT'), field('value', $._expression)),

    _attribute_type: $ => choice(
      $.primitive_type,
      $.collection_type,
      alias($.identifier, $.type_identifier),
    ),

    edge_definition: $ => seq(
      choice(kw('CREATE'), kw('ADD')),
      optional(field('direction', choice(kw('DIRECTED'), kw('UNDIRECTED')))),
      kw('EDGE'),
      field('name', $.identifier),
      field('attributes', $.edge_attribute_list),
      optional($.with_clause),
    ),

    edge_attribute_list: $ => seq(
      '(',
      pipeSep1($.edge_pair),
      repeat(seq(',', choice($.attribute_definition, $.discriminator))),
      ')',
    ),

    edge_pair: $ => seq(
      kw('FROM'),
      $._edge_pair_from,
      ',',
      kw('TO'),
      $._edge_pair_to,
    ),

    _edge_pair_from: $ => choice(
      field('from', alias('*', $.wildcard)),
      pipeSep1(field('from', $.identifier)),
    ),

    _edge_pair_to: $ => choice(
      field('to', alias('*', $.wildcard)),
      pipeSep1(field('to', $.identifier)),
    ),

    discriminator: $ => seq(
      kw('DISCRIMINATOR'),
      '(',
      commaSep1(choice($.attribute_definition, $.identifier)),
      ')',
    ),

    with_clause: $ => seq(kw('WITH'), commaSep1($.option_assignment)),

    option_assignment: $ => seq(
      field('key', $.identifier),
      '=',
      field('value', $._option_value),
    ),

    _option_value: $ => choice(
      $.string,
      $.integer,
      $.float,
      $.boolean,
      $.identifier,
    ),

    graph_definition: $ => seq(
      kw('CREATE'),
      kw('GRAPH'),
      field('name', $.identifier),
      choice(
        seq(
          '(',
          optional(choice(
            alias('*', $.wildcard),
            commaSep1(field('member', $.identifier)),
          )),
          ')',
        ),
        // Tag-based graph: `AS base (v1:tag1&tag2, e1)` or `AS base:tag`.
        seq(
          kw('AS'),
          field('base', $.identifier),
          choice(
            seq('(', commaSep1(seq(field('member', $.identifier), optional(seq(':', $.tag_expression)))), ')'),
            seq(':', $.tag_expression),
          ),
        ),
      ),
      optional(choice($.with_clause, seq(kw('WITH'), kw('ADMIN'), field('admin', $.identifier)))),
    ),

    tag_expression: $ => seq(field('tag', $.identifier), repeat(seq('&', field('tag', $.identifier)))),

    typedef_statement: $ => seq(
      kw('TYPEDEF'),
      choice(
        seq(kw('TUPLE'), '<', commaSep1($.tuple_field), '>'),
        // `TYPEDEF HeapAccum<Rec>(10, score DESC) Top_Heap`
        field('type', $.accumulator_type),
      ),
      field('name', $._name),
    ),

    tuple_field: $ => choice(
      seq(
        field('type', $._type),
        optional($.type_size),
        field('name', choice($.identifier, $._soft_name)),
      ),
      seq(
        field('name', choice($.identifier, $._soft_name)),
        field('type', choice(
          $.primitive_type,
          $.vertex_type,
          $.edge_type,
          $.collection_type,
        )),
        optional($.type_size),
      ),
    ),

    type_size: $ => seq('(', $.integer, ')'),

    // ------------------------------------------------------------------
    // Types
    // ------------------------------------------------------------------

    _type: $ => choice(
      $.primitive_type,
      $.vertex_type,
      $.edge_type,
      $.collection_type,
      $.accumulator_type,
      $.tuple_type,
      alias($.identifier, $.type_identifier),
      alias($._soft_keyword, $.type_identifier),
    ),

    primitive_type: $ => choice(
      kw('INT'),
      kw('UINT'),
      kw('FLOAT'),
      kw('DOUBLE'),
      kw('BOOL'),
      kw('DATETIME'),
      seq(kw('STRING'), optional(kw('COMPRESS'))),
      kw('JSONOBJECT'),
      kw('JSONARRAY'),
      // `FIXED_BINARY(8)`: a binary value of 8 bytes.
      seq(kw('FIXED_BINARY'), '(', $.integer, ')'),
    ),

    collection_type: $ => choice(
      seq(
        field('kind', choice(kw('LIST'), kw('SET'), kw('BAG'))),
        '<',
        field('element', $._type),
        '>',
      ),
      seq(
        field('kind', kw('MAP')),
        '<',
        field('key', $._type),
        ',',
        field('value', $._type),
        '>',
      ),
    ),

    interpret_query_statement: $ => seq(
      kw('INTERPRET'),
      choice(
        seq(
          kw('QUERY'),
          field('parameters', $.parameter_list),
          repeat($._query_option),
          field('body', $.query_body),
        ),
        seq(
          kw('QUERY'),
          repeat($.command_option),
          field('name', $.identifier),
          field('arguments', $.argument_list),
          repeat($.command_option),
        ),
        seq(
          kw('OPENCYPHER'),
          kw('QUERY'),
          field('parameters', $.parameter_list),
          repeat($._query_option),
          field('body', $.opencypher_body),
        ),
      ),
    ),

    _query_option: $ => choice(
      $.for_graph_clause,
      $.returns_clause,
      $.api_clause,
      $.syntax_clause,
    ),

    for_graph_clause: $ => seq(kw('FOR'), kw('GRAPH'), field('graph', $.identifier)),

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.in_expression,
      $.between_expression,
      $.like_expression,
      $.is_expression,
      $.case_expression,
      $.interval_expression,
    ),

    tuple: $ => seq($._tuple_head, ')'),

    // `(key -> value)` for MapAccum, `(k1, k2 -> a1, a2)` for GroupByAccum.
    _tuple_head: $ => seq('(', commaSep1($._expression)),

    list_literal: $ => seq('[', commaSep($._expression), ']'),

    // Vertex-set seed: `{p}`, `{Person.*}`, `{ANY}`, `{@@set}`; also the
    // `{key: value}` options of functions such as vectorSearch.
    vertex_set_literal: $ => seq(
      '{',
      commaSep(choice($._expression, alias(kw('ANY'), $.any), $.wildcard, $.pair)),
      '}',
    ),

    // `{key: value}`; JSON arguments of RUN QUERY quote the key.
    pair: $ => seq(field('key', choice($.identifier, $.string)), ':', field('value', $._expression)),

    argument_list: $ => seq(
      '(',
      optional(field('modifier', choice(
        kw('DISTINCT'),
        kw('LEADING'),
        kw('TRAILING'),
        kw('BOTH'),
      ))),
      // `_` passes a query its default value: `RUN QUERY q(21, _)`.
      commaSep(choice($._expression, alias('*', $.wildcard), $.wildcard, $.from_argument)),
      ')',
    ),

    // `trim(LEADING " " FROM s)`
    qualified_identifier: $ => seq($.identifier, repeat1(seq('.', $.identifier))),

    // ------------------------------------------------------------------
    // Loading jobs
    // ------------------------------------------------------------------

    data_source_definition: $ => seq(
      kw('CREATE'),
      kw('DATA_SOURCE'),
      optional(field('type', $.identifier)),
      field('name', $.identifier),
      optional(seq('=', field('config', choice($.string, $.identifier)))),
      optional($.for_graph_clause),
    ),

    package_definition: $ => seq(
      kw('CREATE'),
      kw('PACKAGE'),
      field('name', choice($.identifier, $.qualified_identifier)),
    ),

    use_statement: $ => prec.dynamic(1, seq(
      kw('USE'),
      choice(seq(kw('GRAPH'), field('graph', $.identifier)), kw('GLOBAL')),
    )),

    install_query_statement: $ => seq(
      kw('INSTALL'),
      kw('QUERY'),
      // Install options take no values; `INSTALL QUERY -OPTIMIZE` names no query.
      repeat(alias($._flag, $.command_option)),
      optional(choice(
        alias('*', $.wildcard),
        kw('ALL'),
        commaSep1(field('query', choice($.identifier, $._soft_name, $._command_name, $.qualified_identifier))),
      )),
    ),

    _flag: $ => $.option_flag,

    run_query_statement: $ => seq(
      kw('RUN'),
      kw('QUERY'),
      repeat($.command_option),
      field('query', choice($.identifier, $.qualified_identifier)),
      field('arguments', $.argument_list),
      // `-mode instruction`, `-gzip -o "out.gz"`
      repeat($.command_option),
    ),

    run_job_statement: $ => seq(
      kw('RUN'),
      optional(kw('GLOBAL')),
      choice(kw('LOADING'), kw('SCHEMA_CHANGE')),
      kw('JOB'),
      repeat($.command_option),
      field('job', $._name),
      repeat($.command_option),
      optional($.using_clause),
    ),

    // `-force`, `-n 1,100`, `-PROFILE BASIC`, `-o "out.gz"`
    command_option: $ => seq(
      $.option_flag,
      optional(field('value', choice(commaSep1(choice($.integer, $.line_end)), $.float, $.string, $.identifier))),
    ),

    // `-n 10,$`: from line 10 to the end of the file.
    line_end: _ => '$',

    option_flag: _ => /-[A-Za-z][A-Za-z0-9_]*/,

    drop_statement: $ => seq(
      kw('DROP'),
      choice(
        seq(
          field('kind', choice(kw('VERTEX'), kw('EDGE'), kw('TUPLE'))),
          commaSep1(field('name', $.identifier)),
          optional(seq(kw('FROM'), kw('GRAPH'), field('graph', $.identifier))),
        ),
        seq(field('kind', kw('GRAPH')), field('name', $.identifier), optional(kw('CASCADE'))),
        // `DROP FUNCTION lib1.func1`, `DROP FUNCTION lib1.*`
        seq(field('kind', kw('FUNCTION')), commaSep1(field('name', $.name_pattern))),
        seq(
          field('kind', choice(
            kw('QUERY'),
            kw('JOB'),
            kw('PACKAGE'),
            kw('DATA_SOURCE'),
          )),
          repeat($.command_option),
          choice(
            alias('*', $.wildcard),
            kw('ALL'),
            commaSep1(field('name', choice($.identifier, $._soft_name, $.qualified_identifier))),
          ),
        ),
        seq(
          field('kind', choice(kw('USER'), kw('ROLE'), kw('SECRET'), kw('GROUP'), kw('TAG'))),
          commaSep1(field('name', $.identifier)),
        ),
        kw('ALL'),
      ),
    ),

    show_statement: $ => prec.dynamic(1, seq(
      kw('SHOW'),
      choice(
        // `SHOW GRANTS TO ROLE r1, r2`
        seq(
          field('kind', kw('GRANTS')),
          choice(kw('TO'), kw('OF')),
          kw('ROLE'),
          commaSep1(field('name', $.identifier)),
        ),
        // `SHOW FUNCTION lib1.*`, `SHOW FUNCTION -r "regex"`
        seq(
          field('kind', kw('FUNCTION')),
          optional(alias($._flag, $.command_option)),
          optional(choice(alias('*', $.wildcard), $.string, commaSep1(field('name', $.name_pattern)))),
        ),
        seq(field('kind', choice(
          kw('VERTEX'),
          kw('EDGE'),
          kw('GRAPH'),
          kw('QUERY'),
          kw('JOB'),
          kw('PACKAGE'),
          kw('USER'),
          kw('ROLE'),
          kw('SECRET'),
          kw('TOKEN'),
          kw('DATA_SOURCE'),
          kw('TAG'),
          kw('PRIVILEGE'),
          kw('GROUP'),
          kw('SCHEMA'),
          kw('LOADING'),
          // `SHOW DEFAULT ROLES IN GRAPH g`, `SHOW PROXY USER u`, `SHOW WORKLOAD QUEUE q`
          kw('DEFAULT'),
          kw('PROXY'),
          kw('WORKLOAD'),
          // `SHOW ROW POLICY`
          kw('ROW'),
        )),
          repeat(choice($._command_argument, $._command_name))),
      ),
    )),

    // `GRANT DATA_SOURCE k1 TO GRAPH g1, g2`, `REVOKE DATA_SOURCE k1 FROM GRAPH g1`
    data_source_grant_statement: $ => seq(
      choice(
        seq(kw('GRANT'), kw('DATA_SOURCE'), field('name', $.identifier), kw('TO')),
        seq(kw('REVOKE'), kw('DATA_SOURCE'), field('name', $.identifier), kw('FROM')),
      ),
      kw('GRAPH'),
      commaSep1(field('graph', $.identifier)),
    ),

    // `UPDATE DESCRIPTION OF QUERY q "text"`, `SHOW DESCRIPTION OF QUERY_PARAM q.p`,
    // `DROP DESCRIPTION OF QUERY q1, q2 ON GRAPH g`
    description_statement: $ => prec.dynamic(1, seq(
      choice(kw('UPDATE'), kw('SHOW'), kw('DROP')),
      kw('DESCRIPTION'),
      kw('OF'),
      field('kind', choice(kw('QUERY'), kw('QUERY_PARAM'))),
      choice(alias('*', $.wildcard), commaSep1(field('name', $.name_pattern))),
      optional(seq(kw('ON'), kw('GRAPH'), field('graph', $.identifier))),
      optional(field('description', $.string)),
    )),

    // `ALTER VERTEX Person IN GLOBAL SET ROW POLICY lib.f ON (gender)`,
    // `ALTER VERTEX Person IN GRAPH g CLEAR ROW POLICY`
    row_policy_statement: $ => seq(
      kw('ALTER'),
      field('kind', choice(kw('VERTEX'), kw('EDGE'))),
      field('name', $.identifier),
      kw('IN'),
      choice(kw('GLOBAL'), seq(kw('GRAPH'), field('graph', $.identifier))),
      choice(
        seq(
          kw('SET'),
          kw('ROW'),
          kw('POLICY'),
          field('function', $.name_pattern),
          kw('ON'),
          '(',
          commaSep1(field('attribute', $.identifier)),
          ')',
        ),
        seq(kw('CLEAR'), kw('ROW'), kw('POLICY')),
      ),
    ),

    // `INSTALL FUNCTION lib1.func1`, `INSTALL FUNCTION ALL`
    install_function_statement: $ => seq(
      kw('INSTALL'),
      kw('FUNCTION'),
      repeat(alias($._flag, $.command_option)),
      optional(choice(
        alias('*', $.wildcard),
        kw('ALL'),
        commaSep1(field('function', $.name_pattern)),
      )),
    ),

    // A name or a dotted path that may end in a wildcard: `q1`, `lib1.func1`, `lib1.*`.
    name_pattern: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
      optional(seq(optional('.'), alias('*', $.wildcard))),
    ),

    security_statement: $ => prec.right(seq(
      choice(kw('CREATE'), kw('ALTER')),
      field('kind', choice(
        kw('USER'),
        kw('ROLE'),
        kw('SECRET'),
        kw('GROUP'),
        kw('TOKEN'),
        kw('PASSWORD'),
      )),
      repeat($._command_argument),
    )),

    integer: _ => /\d+/,
